--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I work a full-time job and currently tring to get myself together for my future.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born and Raised in Atlanta, Family is Mexican</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love hiking!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Entreprenuership</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Lawrenceville,ga</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I would love to know how to build websites and program</p>
     </section>
 
     <footer id="footer">
